--- a/.github/instructions/workflows/app.yml
+++ b/.github/instructions/workflows/app.yml
@@ -6,18 +6,20 @@ on:
   pull_request:
     branches: [main]
 
-concurrency:
-  group: lendsqr-${{ github.ref }}
-  cancel-in-progress: true
-
 jobs:
-  ci:
+  test:
     name: CI (lint + test)
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 10.28.0
+          run_install: false
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -26,11 +28,7 @@ jobs:
           # Use 20.19.0 (or change to '20.x' if you want the latest Node 20).
           node-version: "20.19.0"
           cache: "pnpm"
-
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v4
-        with:
-          version: "9"
+          cache-dependency-path: pnpm-lock.yaml
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
